<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <artifactId>qtrouper</artifactId>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                    <release>${java.version}</release>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
                <dependencies>
                    <dependency>
                        <artifactId>asm</artifactId>
                        <groupId>org.ow2.asm</groupId>
                        <version>9.8</version>
                    </dependency>
                </dependencies>
                <groupId>org.apache.maven.plugins</groupId>
                <version>${maven.compiler.version}</version>
            </plugin>

            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <id>test</id>
                        <phase>test</phase>
                    </execution>
                </executions>
                <version>${maven.surefire.plugin.version}</version>
            </plugin>

            <plugin>
                <artifactId>findbugs-maven-plugin</artifactId>
                <groupId>org.codehaus.mojo</groupId>
                <version>3.0.3</version>
            </plugin>

            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <id>attach-sources</id>
                    </execution>
                </executions>
                <groupId>org.apache.maven.plugins</groupId>
                <version>${maven.source.plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.5.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>true</autoPublish>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.7.0</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                    <stagingProgressTimeoutMinutes>10</stagingProgressTimeoutMinutes>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-gpg-plugin</artifactId>
                <executions>
                    <execution>
                        <configuration>
                            <executable>gpg</executable>
                            <useAgent>true</useAgent>
                        </configuration>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                    </execution>
                </executions>
                <groupId>org.apache.maven.plugins</groupId>
                <version>${maven.gpg.plugin.version}</version>
            </plugin>


            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <id>attach-javadocs</id>
                    </execution>
                </executions>
                <groupId>org.apache.maven.plugins</groupId>
                <version>${maven.javadoc.plugin.version}</version>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.jupiter.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <dependencies>
        <dependency>
            <artifactId>lombok</artifactId>
            <groupId>org.projectlombok</groupId>
            <scope>provided</scope>
            <version>${lombok.version}</version>
        </dependency>

        <dependency>
            <artifactId>dropwizard-core</artifactId>
            <groupId>io.dropwizard</groupId>
            <scope>provided</scope>
            <version>${dropwizard.version}</version>
        </dependency>

        <dependency>
            <artifactId>dropwizard-testing</artifactId>
            <groupId>io.dropwizard</groupId>
            <scope>test</scope>
            <version>${dropwizard.version}</version>
        </dependency>

        <dependency>
            <artifactId>reflections</artifactId>
            <groupId>org.reflections</groupId>
            <version>${reflections.version}</version>
        </dependency>

        <!-- RabbitMQ -->
        <dependency>
            <artifactId>amqp-client</artifactId>
            <groupId>com.rabbitmq</groupId>
            <version>${amqp.version}</version>
        </dependency>

        <!-- Junit and Mockito -->
        <dependency>
            <artifactId>junit-jupiter</artifactId>
            <groupId>org.junit.jupiter</groupId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <artifactId>mockito-core</artifactId>
            <groupId>org.mockito</groupId>
            <scope>test</scope>
            <version>${mockito.version}</version>
        </dependency>

        <dependency>
            <artifactId>mockito-junit-jupiter</artifactId>
            <groupId>org.mockito</groupId>
            <scope>test</scope>
            <version>${mockito.version}</version>
        </dependency>
    </dependencies>

    <description>
        A simple interface to provide a java DSL atop RMQ, for message processing with
        programmable retries
    </description>

    <developers>
        <developer>
            <email>rkoushik.14@gmail.com</email>
            <id>koushikr</id>
            <name>Koushik Ramachandra</name>
            <roles>
                <role>owner</role>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <email>chaitanyachavali7@gmail.com</email>
            <id>chaitanyachavali</id>
            <name>Chaitanya Reddy</name>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <distributionManagement>
        <repository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <groupId>com.grookage.qtrouper</groupId>
    <inceptionYear>2015</inceptionYear>
    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/grookage/qtrouper/issues</url>
    </issueManagement>

    <licenses>
        <license>
            <comments>A business-friendly OSS license</comments>
            <distribution>repo</distribution>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <modelVersion>4.0.0</modelVersion>

    <name>qtrouper</name>

    <packaging>jar</packaging>

    <properties>
        <amqp.version>5.18.0</amqp.version>
        <cglib.version>3.2.5</cglib.version>
        <dropwizard.version>2.1.12</dropwizard.version>
        <guava.version>23.0</guava.version>
        <jacoco.reportPath>${project.basedir}/../target/jacoco.exec</jacoco.reportPath>
        <jacoco.version>0.8.0</jacoco.version>
        <junit.jupiter.version>5.8.2</junit.jupiter.version>
        <mockito.version>4.2.0</mockito.version>
        <mockito.version>5.21.0</mockito.version>
        <lombok.version>1.18.44</lombok.version>
        <java.version>17</java.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <reflections.version>0.10.2</reflections.version>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>

        <!--Sonar properties-->
        <sonar.organization>grookage</sonar.organization>
        <testcontainer.rabbitmq.version>1.16.2</testcontainer.rabbitmq.version>

        <sonar.coverage.exclusions>
            **com/grookage/qtrouper/Trouper.java,
            **com/grookage/qtrouper/TrouperBundle.java
            **com/grookage/qtrouper/core/rabbit/RabbitConnection.java
        </sonar.coverage.exclusions>

        <!-- Build Versions -->
        <nexus.staging.plguin.version>1.7.0</nexus.staging.plguin.version>
        <maven.surefire.plugin.version>3.5.4</maven.surefire.plugin.version>
        <maven.compiler.version>3.14.1</maven.compiler.version>
        <maven.source.plugin.version>3.3.1</maven.source.plugin.version>
        <maven.gpg.plugin.version>3.2.8</maven.gpg.plugin.version>
        <maven.javadoc.plugin.version>3.6.3</maven.javadoc.plugin.version>
    </properties>

    <profiles>
        <profile>
            <id>add-java-open-options-for-jdk16+</id>
            <activation>
                <jdk>[16,)</jdk>
            </activation>
            <properties>
                <argLine>
                    --add-opens java.base/java.net=ALL-UNNAMED
                    --add-opens java.base/sun.net=ALL-UNNAMED
                </argLine>
            </properties>
        </profile>
    </profiles>

    <scm>
        <connection>scm:git:https://github.com/grookage/qtrouper.git</connection>
        <developerConnection>scm:git:https://github.com/grookage/qtrouper.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/grookage/qtrouper.git</url>
    </scm>

    <url>https://github.com/grookage/qtrouper</url>

    <version>1.0.4</version>

</project>
